--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,14 @@
 
 @import "friends.css";
 @import "user-component.css";
+@import "badge.css";
+@import "find.css";
 
 body {
     color: #2e363e;
     font-family: 'Open Sans', sans-serif;
+}
+
+.main-screen {
+    padding: 0px var(--horizontal-space);
 }
