--- a/css/find.css
+++ b/css/find.css
@@ -1,6 +1,7 @@
 .find-icons {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .find-icons__icon {
@@ -10,7 +11,12 @@
     
 }
 
+.find-icons__icon i {
+    font-size: 35px;
+    /* icon 크기 조절 */
+}
+
 .find-icons__icon span {
-    display: block;
-    margin-top: 10px;
+    
+    margin-top: 18px;
 }
