--- a/css/find.css
+++ b/css/find.css
@@ -1,7 +1,7 @@
 .find-icons {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    padding-bottom: 25px;
 }
 
 .find-icons__icon {
@@ -17,6 +17,25 @@
 }
 
 .find-icons__icon span {
-    
     margin-top: 18px;
+}
+
+.recommended-friends {
+    border-top: var(--main-border);
+    border-bottom: var(--main-border);
+    margin: 25px 0px;
+    padding: 25px 0px;
+}
+
+.recommended-friends__title {
+    font-size: 14px;
+    color: var(--my-color-grey);
+}
+
+.recommended-friends span {
+    display: block;
+    margin: 100px 0;
+    text-align: center;
+    font-size: 18px;
+    color: var(--my-color-grey);
 }
