--- a/css/find.css
+++ b/css/find.css
@@ -53,6 +53,8 @@
 
 .open-post {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .open-post__title {
@@ -92,4 +94,32 @@
 
 .open-post__member-status {
     color: #FFB0E0;
+}
+
+.open-post__photo {
+    position: relative;
+}
+
+.open-post__photo img {
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+}
+
+.open-post__heart-count {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: rgb(255, 255, 255);
+    opacity: 0.9;
+    padding: 5px 10px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 12px;
+}
+
+.open-post__heart-count span {
+    margin-left: 3px;
 }
