--- a/css/badge.css
+++ b/css/badge.css
@@ -14,10 +14,8 @@
     width: 6px;
     height: 6px;
     border-radius: 3px;
-    /* position: absolute; */
-    /* right: -7px;
-    top: -6px; */
-    position: relative;
-    right: -95px;
-    top: -25px;
+    position: absolute;
+    right: -7px;
+    top: -6px; 
+    
 }
