--- a/css/screen-header.css
+++ b/css/screen-header.css
@@ -16,5 +16,19 @@
 
 .screen-header__icons span{
     margin-left: 25px;
+}
+
+.screen-header__icons {
     position: relative;
+}
+
+.user-component__text {
+    position: relative;
+}
+
+.exclamation {
+    position: absolute;
+    right: -20px;
+    bottom: 0;
+    color: tomato;
 }
